# PerfectImager

./: CMakeLists.txt  README.md  execute.sh  inverse_direct_fourier_transform.cu  inverse_direct_fourier_transform.h  main.cpp
configs/: gaussian.yaml  gleam_large.yaml  gleam_small.yaml  vla.yaml
src/: inverse_direct_fourier_transform.cu
